tests/bad/other/bad008.lat
  int main() {
    if ("el" > 0) return 0;
  
    if (false)
       return 0; 
}
